syntax = "proto3";

message News {
    string id = 1;
    string title = 2;
    string description = 3;
    string text = 4;
    string date = 5;
}

service NewsService {
  rpc getAllNews (Empty) returns (NewsList) {}
  rpc getNews (NewsId) returns (News) {}
  rpc addNews (News) returns (News) {}
  rpc editNews (News) returns (News) {}
  rpc deleteNews (NewsId) returns (Empty) {}
}

message Empty {}

message NewsList {
   repeated News news = 1;
}

message NewsId {
  string id = 1;
}
